--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About Fearless Singing</title>
+    <title>About Fearless Singing | David Troup, Singing Teacher in Clintonville, Columbus, Ohio offering private lessons to all ages from pop to opera and jazz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.svg" style="width:160px;"/>
+                <img src="img/logo.svg" style="width:110px;"/>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
                             <p>Do you want to learn solid techniques that will serve you well for many kinds of singing styles? Do you want to become a fearless singer whose voice possesses beauty, ease, and confidence? Individual singing instruction offers a chance for you to redirect pent-up stress and gain a satisfying sense of accomplishment. Voice lessons act as your very own “private hour” to be yourself – no chores, no homework, no stress and no worries – just you and your love of music.</p>
                             <p>My teaching methods utilize Bel Canto techniques (Italian for “good singing”) and I show students how these techniques can help them to succeed in almost every singing styles. I also discuss the differences between the “language of speech” and the “language of singing,” and how this knowledge can place a student on a fast track to improvement. I am an elected member of NATS, the National Association of Teachers of Singing.</p>
                             <p>My knowledge spans many musical styles, such as Broadway, American popular standards, jazz, classical, opera, blues, rock and folk. I tailor the singing repertoire studied in each lesson to the specific interests of the student. A number of my young singing artists have designed and performed their own solo shows, inspired perhaps in a small way by my experiences as a professional singer and entertainer. </p>
-                            <p>Should you have any questions, please refer to my <a href="faq.html">Frequently Asked Questions</a> page. Naturally, should you wish to talk about scheduling your first lesson, you can view my contact information below!.</p>
+                            <p>Should you have any questions, please refer to my <a href="faq.html">Frequently Asked Questions</a> page. Naturally, should you wish to talk about scheduling your first lesson, you can view my contact information below.</p>
 
                         </div>
 
@@ -176,7 +176,8 @@
                 <div class="col-lg-5 col-md-6 mb-4">
                     <h4>My Experience</h4>
                     <p>With over 20 years as a vocal instructor, and 28 years as an entertainer- you can believe in my pedigree!<br/>
-                    <a href="img/david.jpg">View NATs Certification</a></p>
+                    <a href="img/david.jpg">View NATs Certification</a>
+                    <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Sound Clips</a></p>
                 </div>
             </div>
         </div>
@@ -202,6 +203,50 @@
                             <p><b>Email</b><br/><a href="mailto:DavidTroup@cox.net">DavidTroup@cox.net</a></p>
                         </div>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="voiceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="voiceModal">David's Voice Clips</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/david4.jpg" alt="Portrait of David Troup" style="width:100%; padding-bottom:15px;" /> 
+                    <p>"ONCE UPON A TIME"</p>
+                    <audio controls>
+                            <source src="music/ONCE_UPON_A_TIME.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"MADAMINA"</p>
+                    <audio controls>
+                            <source src="music/MADAMINA.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PICK YOURSELF UP"</p>
+                    <audio controls>
+                            <source src="music/PICK_YOURSELF_UP.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"“SOLILOQUY"</p>
+                    <audio controls>
+                            <source src="music/SOLILOQUY.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"HEART"</p>
+                    <audio controls>
+                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
