--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Singing FAQs</title>
+    <title>Singing FAQs | David Troup, Singing Teacher in Clintonville, Columbus, Ohio offering private lessons to all ages from pop to opera and jazz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.svg" style="width:160px;"/>
+                <img src="img/logo.svg" style="width:110px;"/>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -131,7 +131,8 @@
                 <div class="col-lg-5 col-md-6 mb-4">
                     <h4>My Experience</h4>
                     <p>With over 20 years as a vocal instructor, and 28 years as an entertainer- you can believe in my pedigree!<br/>
-                    <a href="img/david.jpg">View NATs Certification</a></p>
+                    <a href="img/david.jpg">View NATs Certification</a>
+                    <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Sound Clips</a></p>
                 </div>
             </div>
         </div>
@@ -165,6 +166,49 @@
         </div>
     </div>
 
+    <div class="modal fade" id="voiceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="voiceModal">David's Voice Clips</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/david4.jpg" alt="Portrait of David Troup" style="width:100%; padding-bottom:15px;" /> 
+                    <p>"ONCE UPON A TIME"</p>
+                    <audio controls>
+                            <source src="music/ONCE_UPON_A_TIME.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"MADAMINA"</p>
+                    <audio controls>
+                            <source src="music/MADAMINA.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PICK YOURSELF UP"</p>
+                    <audio controls>
+                            <source src="music/PICK_YOURSELF_UP.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"“SOLILOQUY"</p>
+                    <audio controls>
+                            <source src="music/SOLILOQUY.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"HEART"</p>
+                    <audio controls>
+                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
