--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>David Troup</title>
+    <title>Home | David Troup, Singing Teacher in Clintonville, Columbus, Ohio offering private lessons to all ages from pop to opera and jazz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.svg" style="width:160px;"/>
+                <img src="img/logo.svg" style="width:110px;"/>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -77,9 +77,14 @@
         <!-- Page Features -->
         
         <div class="container">
+            <div class="index-img">
+                <div class="col-md-6">
+                    <img src="img/david4.jpg" style="width:100%; padding-bottom:30px;"/>
+                </div>
+            </div>
             <div class="col-xl-7">
             <h2>My Student Testimonials</h2>
-        <p>Throughout my many years of performing and teaching, I’ve enjoyed some fantastic journeys!  So many of my students, past and present, have a special place in my heart.  The memories of their voices, their personalities, their love of music coupled with a striving to improve their musical abilities have kept them in my thoughts. Here are a few of them-</p>
+        <p>Throughout my many years of performing and teaching, I’ve enjoyed some fantastic journeys!  So many of my students, past and present, have a special place in my heart.  The memories of their voices, their personalities, their love of music coupled with a striving to improve their musical abilities have kept them in my thoughts. Here are a few of them:</p>
                 </div>
         </div>
         <br/>
@@ -190,7 +195,7 @@
                     <img class="card-img-top" src="img/students/rachel-s.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-title">Rachel S.</h4>
-                        <p class="card-text">I am sending this note to you to express thanks for all you do for Rachel! Thank you for not only the great voice and music instruction you impart, but also the greater wisdom you inject over the course of your lessons, particularly with Rachel's auditions and college plans on the horizon.  I know all this probably comes quite naturally for you, due to your fine character, but Christine  and  I  both  are  very  grateful.</p>
+                        <p class="card-text">A letter from Rachel's parents:<br/><br/>I am sending this note to you to express thanks for all you do for Rachel! Thank you for not only the great voice and music instruction you impart, but also the greater wisdom you inject over the course of your lessons, particularly with Rachel's auditions and college plans on the horizon.  I know all this probably comes quite naturally for you, due to your fine character, but Christine  and  I  both  are  very  grateful.</p>
                     </div>
                 </div>
             </div>
@@ -219,7 +224,8 @@
                 <div class="col-lg-5 col-md-6 mb-4">
                     <h4>My Experience</h4>
                     <p>With over 20 years as a vocal instructor, and 28 years as an entertainer- you can believe in my pedigree!<br/>
-                        <a href="img/david.jpg">View NATs Certification</a></p>
+                        <a href="img/david.jpg">View NATs Certification</a>
+                    <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Sound Clips</a></p>
                 </div>
             </div>
         </div>
@@ -328,6 +334,50 @@
                     <p>In my first lesson with David Troup, I began making the sounds that I had only dreamed about.  I floated out of his studio that day as if I was walking on a cloud!</p>
                     <p>David knows how to adapt his voice to many singing styles without compromising its quality.  Through his guidance, I have learned to sing different genres of music ranging from jazz to opera with equal beauty, control, power and excitement.  Moreover, I have gained a great amount of confidence in my solo performing, and I can now sing for an audience of total strangers and love every minute of it!</p>
                     <p>In addition, David is a superb musician who seamlessly blends his knowledge of musicianship into each lesson.  My sight-reading skills and understanding of music theory have improved exponentially under his guidance.  Above all, his greatest gift as a teacher is his positive and encouraging nature with everyone he teaches. </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="modal fade" id="voiceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="voiceModal">David's Voice Clips</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/david4.jpg" alt="Portrait of David Troup" style="width:100%; padding-bottom:15px;" /> 
+                    <p>"ONCE UPON A TIME"</p>
+                    <audio controls>
+                            <source src="music/ONCE_UPON_A_TIME.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"MADAMINA"</p>
+                    <audio controls>
+                            <source src="music/MADAMINA.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PICK YOURSELF UP"</p>
+                    <audio controls>
+                            <source src="music/PICK_YOURSELF_UP.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"“SOLILOQUY"</p>
+                    <audio controls>
+                            <source src="music/SOLILOQUY.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"HEART"</p>
+                    <audio controls>
+                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
