--- a/policies.html
+++ b/policies.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>My Policies and Pricing</title>
+    <title>My Policies and Pricing | David Troup, Singing Teacher in Clintonville, Columbus, Ohio offering private lessons to all ages from pop to opera and jazz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.svg" style="width:160px;"/>
+                <img src="img/logo.svg" style="width:110px;"/>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Lesson Policies</h2>
                         <p class="card-text"><b>Lessons are 55-minute sessions</b> that include both flexible vocal exercises and song practice with sheet music. I do not offer half-hour lessons. I also strongly recommend taking lessons once a week for best results.</p>
-                        <p>Please feel free to bring in music you want to practice or improve on, or I can provide song recommendations from my extensive library.</p>
+                        <p>In your lessons, I can provide you with song recommendations from my extensive music library, or you are quite welcome to bring songs that you would like to sing!</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="col-md-9">
                     <div class="card-body">
                         <h2 class="card-title">My Pricing</h2>
-                        <p class="card-text"><b>My lesson fee is $65.00</b> per 55-minute session. I request that you pay me in full for each month during the first session of that month. You will be writing fewer checks, and I will be able to pay my monthly expenses in a timely manner.</p>
+                        <p class="card-text"><b>My lesson fee is $65.00</b> per 55-minute session. I request that you pay me in full for each month during the first session of that month. You will be writing fewer checks, and I will be able to pay my monthly expenses in a timely manner. Of course, I also accept bank transfers from Zelle and Venmo.</p>
                         <p>Since many folks want to “take a voice teacher for a test drive” as they investigate their first lesson, I ask to be paid only for that first session as the hour comes to a close.</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                 <div class="col-md-9">
                     <div class="card-body">
                         <h2 class="card-title">Skype Lessons</h2>
-                        <p class="card-text">Can't come in person? Don't worry! I have the equipment to host lessons over skype as well. Policies and pricing remain the same, and you will receive a recording of the session through dropbox.</p>
+                        <p class="card-text">Can’t come in person? Don’t worry! I have the equipment to teach you over either Skype or Zoom. Policies and pricing remain the same, but online lessons must be paid in advance of each 60-minute session through Zelle or Venmo. </p>
                     </div>
                 </div>
             </div>
@@ -109,9 +109,9 @@
                     <div class="card-body">
                         <h2 class="card-title">Credit Lessons</h2>
                         <p class="card-text">A prepaid lesson that must be cancelled for any reason becomes a credit lesson that never expires. Credit lessons can be scheduled during school or work holidays, or whenever we can find a suitable time. If you live far away, we can simply add extra time to a scheduled lesson as well!</p>
+                    </div>
                 </div>
-            </div>
-        </div><br/>
+            </div><br/>
         </div>
     </div>
     <!-- /.container -->
@@ -134,7 +134,8 @@
                 <div class="col-lg-5 col-md-6 mb-4">
                     <h4>My Experience</h4>
                     <p>With over 20 years as a vocal instructor, and 28 years as an entertainer- you can believe in my pedigree!<br/>
-                        <a href="img/david.jpg">View NATs Certification</a></p>
+                        <a href="img/david.jpg">View NATs Certification</a>
+                        <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Sound Clips</a></p>
                 </div>
             </div>
         </div>
@@ -160,6 +161,50 @@
                             <p><b>Email</b><br/><a href="mailto:DavidTroup@cox.net">DavidTroup@cox.net</a></p>
                         </div>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="voiceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="voiceModal">David's Voice Clips</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/david4.jpg" alt="Portrait of David Troup" style="width:100%; padding-bottom:15px;" /> 
+                    <p>"ONCE UPON A TIME"</p>
+                    <audio controls>
+                            <source src="music/ONCE_UPON_A_TIME.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"MADAMINA"</p>
+                    <audio controls>
+                            <source src="music/MADAMINA.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PICK YOURSELF UP"</p>
+                    <audio controls>
+                            <source src="music/PICK_YOURSELF_UP.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"“SOLILOQUY"</p>
+                    <audio controls>
+                            <source src="music/SOLILOQUY.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"HEART"</p>
+                    <audio controls>
+                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
