--- a/index.html
+++ b/index.html
@@ -355,22 +355,17 @@
                     <img src="img/david4.jpg" alt="Portrait of David Troup" style="width:100%; padding-bottom:15px;" /> 
                     <p>"ONCE UPON A TIME"</p>
                     <audio controls>
-                            <source src="music/ONCE_UPON_A_TIME.mp3" style="width:100%;" type="audio/mpeg">
+                            <source src="music/ONCE%20UPON%20A%20TIME.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
                     <p>"MADAMINA"</p>
                     <audio controls>
-                            <source src="music/MADAMINA.mp3" style="width:100%;" type="audio/mpeg">
+                            <source src="music/MADAMINA.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
-                    <p>"PICK YOURSELF UP"</p>
+                    <p>"WHERE IS THE LIFE THAT LATE I LED"</p>
                     <audio controls>
-                            <source src="music/PICK_YOURSELF_UP.mp3" style="width:100%;" type="audio/mpeg">
-                                Your browser does not support the audio element.
-                        </audio>
-                    <p>"“SOLILOQUY"</p>
-                    <audio controls>
-                            <source src="music/SOLILOQUY.mp3" style="width:100%;" type="audio/mpeg">
+                            <source src="music/WHERE%20IS%20THE%20LIFE%20THAT%20LATE%20I%20LED.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
                     <p>"HEART"</p>
