--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title" id="voiceModal">David's Voice Clips</h2>
+                    <h2 class="modal-title" id="voiceModal">Listen to David's Recorded Songs</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
