--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <h4>My Experience</h4>
                     <p>With over 20 years as a vocal instructor, and 28 years as an entertainer- you can believe in my pedigree!<br/>
                         <a href="img/david.jpg">View NATs Certification</a>
-                    <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Sound Clips</a></p>
+                    <br/><a href="#voiceModal" data-target="#voiceModal" data-toggle="modal">Listen to David's Recorded Songs</a></p>
                 </div>
             </div>
         </div>
