--- a/about.html
+++ b/about.html
@@ -232,6 +232,16 @@
                             <source src="music/MADAMINA.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
+                    <p>"ALL THE THINGS YOU ARE"</p>
+                    <audio controls>
+                            <source src="music/ALL%20THE%20THINGS%20YOU%20ARE.wav" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PETER PAN MEDLEY"</p>
+                    <audio controls>
+                            <source src="music/PETER%20PAN%20MEDLEY.wav" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
                     <p>"WHERE IS THE LIFE THAT LATE I LED"</p>
                     <audio controls>
                             <source src="music/WHERE%20IS%20THE%20LIFE%20THAT%20LATE%20I%20LED.wav" style="width:100%;" type="audio/mpeg">
@@ -239,7 +249,7 @@
                         </audio>
                     <p>"HEART"</p>
                     <audio controls>
-                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                            <source src="music/HEART.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
                 </div>
