--- a/faq.html
+++ b/faq.html
@@ -83,7 +83,7 @@
                 
                 <div class="row-normal">
                 <h2>How do I find a good voice teacher?</h2>
-                <p>If you live in the greater Washington metropolitan area, you need only to call me, of course! Unfortunately, for the novice musician or parent, it is a very difficult task to discover who the good singing teachers are.  If you are searching for yourself or for your child, and you have little knowledge about proper singing techniques, how can you possibly make an informed decision as to which teacher would best serve your needs?  Making the decision on price alone is not a good idea.</p>
+                <p>If you live in Columbus, Ohio... you need only to call me, of course! Unfortunately, for the novice musician or parent, it is a very difficult task to discover who the good singing teachers are.  If you are searching for yourself or for your child, and you have little knowledge about proper singing techniques, how can you possibly make an informed decision as to which teacher would best serve your needs?  Making the decision on price alone is not a good idea.</p>
                 <p>Unfortunately, there is no easy way to measure the knowledge and experience that a singing teacher possesses. I suggest that you ask the teacher to <a href="index.html">provide testimonials</a> from their students that reflect positive results. Although professional performing experience does not automatically translate into being a great teacher, the teacher who has maintained a career as a professional artist brings to the table a much deeper level of expertise and experience in doing precisely what you want to do!  This expertise and experience can benefit the student immensely. Make sure to study their <a href="introduction.html">professional biography</a> to determine in what musical genres they have specialized.  If your focus is on Broadway or jazz, it may not be either sensible or productive to study with a teacher who has only sung in opera productions.</p>
                 </div>
                 
@@ -187,6 +187,16 @@
                             <source src="music/MADAMINA.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
+                    <p>"ALL THE THINGS YOU ARE"</p>
+                    <audio controls>
+                            <source src="music/ALL%20THE%20THINGS%20YOU%20ARE.wav" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
+                    <p>"PETER PAN MEDLEY"</p>
+                    <audio controls>
+                            <source src="music/PETER%20PAN%20MEDLEY.wav" style="width:100%;" type="audio/mpeg">
+                                Your browser does not support the audio element.
+                        </audio>
                     <p>"WHERE IS THE LIFE THAT LATE I LED"</p>
                     <audio controls>
                             <source src="music/WHERE%20IS%20THE%20LIFE%20THAT%20LATE%20I%20LED.wav" style="width:100%;" type="audio/mpeg">
@@ -194,7 +204,7 @@
                         </audio>
                     <p>"HEART"</p>
                     <audio controls>
-                            <source src="music/HEART.mp3" style="width:100%;" type="audio/mpeg">
+                            <source src="music/HEART.wav" style="width:100%;" type="audio/mpeg">
                                 Your browser does not support the audio element.
                         </audio>
                 </div>
