--- a/intro.html
+++ b/intro.html
@@ -171,7 +171,7 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h4>Contact Me</h4>
                     <p>Call or text<br/><b><a href="tel:+1-703-981-2648">(703) 981-2468</a></b></p>
-                    <p>Email<br/><b><a href="mailto:DavidTroup@cox.net">DavidTroup@cox.net</a></b></p>
+                    <p>Email<br/><b><a href="mailto:DavidTroupSinger@gmail.com">DavidTroupSinger@gmail.com</a></b></p>
                 </div>
                 <div class="col-lg-5 col-md-6 mb-4">
                     <h4>My Experience</h4>
@@ -200,7 +200,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <p><b>Phone</b><br/><a href="tel:+1-703-981-2648">(703) 981-2468</a></p>
-                            <p><b>Email</b><br/><a href="mailto:DavidTroup@cox.net">DavidTroup@cox.net</a></p>
+                            <p><b>Email</b><br/><a href="mailto:DavidTroupSinger@gmail.com">DavidTroupSinger@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
